<resources>
    <string name="app_name">Bazaar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forgot_password_instruction"> We will send you an email with instructions on how to reset your password.</string>
    <string name="email_me">Email me</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="forgot_q_password">Forgot password?</string>
    <string name="click_here">Click here</string>
    <string name="new_to_bazaar">New to Bazaar?</string>
    <string name="sign_up">Sign up</string>
    <string name="register">Register</string>
    <string name="full_name">Full name</string>
    <string name="phone_number">Phone Number</string>
    <string name="already_have">Already have an account?</string>
    <string name="timeline">Timeline</string>
    <string name="my_market">My market</string>
    <string name="settings">Settings</string>
    <string name="reset_password">Reset Password</string>
    <string name="helikopteres_laura">Helikopteres Laura</string>
    <string name="product_detail_preview">Product detail preview</string>
    <string name="lorem_ipsum">Lorem ipsum</string>
    <string name="rating">Rating</string>
    <string name="filtering">Filter</string>
    <string name="title">Title</string>
    <string name="active">Active</string>
    <string name="off">off</string>
    <string name="inactive">Inactive</string>
    <string name="sorting">Sorting</string>
    <string name="descending">Descending</string>
    <string name="ascending">Ascending</string>
    <string name="a_z">A-Z</string>
    <string name="z_a">Z-A</string>
    <string name="remove_filters">Remove filters</string>
    <string name="limit">Limit</string>
    <string name="today">Today</string>
    <string name="give_detail">Give us details about your fare</string>
    <string name="price_amount">Price/Amount</string>
    <string name="price_type">Price type</string>
    <string name="available_amount">Available amount</string>
    <string name="short_description">Short description</string>
    <string name="preview">Preview my fare</string>
    <string name="launch">Launch my fare</string>
    <string name="create_your_fare">Create your fare</string>
    <string name="update_your_profile">Update your profile</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="ongoing_sales">Ongoing Sales</string>
    <string name="ongoing_orders">Ongoing Orders</string>
    <string name="my_fares">My fares</string>
    <string name="description">Description</string>
    <string name="amount">Amount</string>
    <string name="order">Order</string>

    <string-array name="price_type_arr">
        <item>RON</item>
        <item>EUR</item>
        <item>USD</item>
        <item>BTC</item>
        <item>ETH</item>
    </string-array>

    <string-array name="amount_type_arr">
        <item>Kg</item>
        <item>g</item>
        <item>l</item>
        <item>dl</item>
        <item>db</item>
    </string-array>
</resources>